Verified by Marti4n v1.0.0 Initial commit

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ciamac-da.github.io/react-redux-auth",
   "name": "react-redux-auth",
   "version": "0.1.0",
   "private": true,
